[gd_scene load_steps=2 format=3 uid="uid://b3x07cjbctymn"]

[ext_resource type="Script" path="res://scripts/ui/tooltips/spaceship_tooltip.gd" id="1_hf46u"]

[node name="SpaceshipTooltip" type="Control"]
z_index = 101
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 25.0
mouse_filter = 2
script = ExtResource("1_hf46u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0156863, 0, 0.223529, 0.839216)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 8
text = "Cargo"
vertical_alignment = 1

[node name="MaxHoldLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_font_sizes/font_size = 6
text = "Max hold:"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ResourceContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
